@@ -19,9 +19,11 @@ while(<STDIN>) {
     push @{$files{$file}},@deps;
 }
 
-foreach my $file (sort keys %files) {
+my $file;
+foreach $file (sort keys %files) {
     my $len=0;
-    foreach my $dep (sort @{$files{$file}}) {
+    my $dep;
+    foreach $dep (sort @{$files{$file}}) {
 	$len=0 if $len+length($dep)+1 >= 80;
 	if($len == 0) {
 	    print "\n$file:";
