@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Let util/clean-depend.pl work also with older Perl 5.00x versions.
+     [Matthias Loepfe <Matthias.Loepfe@adnovum.ch>]
+
   *) Fix Makefile.org so CC,CFLAG etc are passed to 'make links' add
      advapi32.lib to Win32 build and change the pem test comparision
      to fc.exe (thanks to Ulrich Kroener <kroneru@yahoo.com> for the
